# gfpm

./: AUTHORS  MESSAGES  Makefile  Makefile.am  NEWS  README  TODO  autoclean.sh  autogen.sh  configure.ac
data/: Makefile.am  datemsk  gfpm-kde.desktop  gfpm.desktop  gfpm.glade  gfpm.ui
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
glade/: gfpm.glade
nautilus-extension/: Makefile.am  nautilus-gfpm-module.c  nautilus-gfpm.c  nautilus-gfpm.h
po/: Makevars  POTFILES.in
rc/: wxfpm.xrc
src/: Makefile.am  app.cpp  app.h  frame.cpp  frame.h  gfpm-about.c  gfpm-about.h  gfpm-config.c  gfpm-config.h  gfpm-db.c  gfpm-db.h  gfpm-icmonitor.c  gfpm-icmonitor.h  gfpm-interface.c  gfpm-interface.h  gfpm-logviewer.c  gfpm-logviewer.h  gfpm-messages.c  gfpm-messages.h  gfpm-optimizedb.c  gfpm-optimizedb.h  gfpm-packagelist.c  gfpm-packagelist.h  gfpm-prefs.c  gfpm-prefs.h  gfpm-progress.c  gfpm-progress.h  gfpm-quickpane.c  gfpm-quickpane.h  gfpm-repomanager.c  gfpm-repomanager.h  gfpm-systray.c  gfpm-systray.h  gfpm-util.c  gfpm-util.h  gfpm.c  gfpm.h  widgets.c  widgets.h  wxfpm.wxg
test/: Makefile  lsgrps.c
thunar-plugin/: Makefile.am  thunar-gfpm-module.c  thunar-gfpm.c  thunar-gfpm.h
